Top Banner added

--- a/index.html
+++ b/index.html
@@ -3,23 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>masud profile</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,700;1,400;1,700&family=Bebas+Neue&family=Righteous&display=swap"
-      rel="stylesheet"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet"
-    />
-
+    <title>Kan Kaneki world</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Welcom to</h1>
-    <h1><span class="orange-colour">masud </span>world</h1>
+    <section class="to-banner">
+      <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1><span class="orange-colour">Kan Kaneki </span>World !</h1>
+        <h3>I am one-eye king Ghoul</h3>
+        <p>
+          he story follows Ken Kaneki, a student who barely survives a deadly
+          encounter with Rize Kamishiro, his date who reveals herself as a ghoul
+          and tries to eat him. He is taken to the hospital in critical
+          condition. After recovering, Kaneki discovers that he underwent a
+          surgery that transformed him into a half-ghoul.
+        </p>
+        <a class="link-button"
+        target="_blank"
+        href="https://albatros3042.github.io/-ken-kaneki-projects/"
+        >Hire Me</a>
+      </div>
+      <div class="half-width">
+        <img
+          target="_blank"
+          src="images/tokyo-ghoul-kaneki-ken-in-eyepatch-mask-30t2g6edxbz1jlkx.jpg"
+          alt=""
+        />
+      </div>
+    </section>
+    </div>
+    <div></div>
   </body>
 </html>
