--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <section class="to-banner">
-      <div class="half-width">
+      <div class="half-width context">
         <h1>Welcome To</h1>
-        <h1><span class="orange-colour">Kan Kaneki </span>World !</h1>
+        <h1><span class="orange-color">Kan Kaneki </span>World !</h1>
         <h3>I am one-eye king Ghoul</h3>
         <p>
           he story follows Ken Kaneki, a student who barely survives a deadly
@@ -24,7 +24,7 @@
         href="https://albatros3042.github.io/-ken-kaneki-projects/"
         >Hire Me</a>
       </div>
-      <div class="half-width">
+      <div class="half-width img-container">
         <img
           target="_blank"
           src="images/tokyo-ghoul-kaneki-ken-in-eyepatch-mask-30t2g6edxbz1jlkx.jpg"
