--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="to-banner">
-      <div class="half-width context">
+    <section class="top-banner">
+      <div class="context">
         <h1>Welcome To</h1>
         <h1><span class="orange-color">Kan Kaneki </span>World !</h1>
         <h3>I am one-eye king Ghoul</h3>
@@ -37,9 +37,14 @@
     .
     <section class="dream-big">
       <div class="img">
-        <img target="_blank" src="images/Ken Kaneki.jpg" alt="" />
+        <img
+          class="images"
+          target="_blank"
+          src="images/Ken Kaneki.jpg"
+          alt=""
+        />
       </div>
-      <div class="half-width">
+      <div class="half-width ghouls">
         <h2>Kan Kaneki about</h2>
         <h3 class="text">He is a one eye ghoul</h3>
 
@@ -59,6 +64,20 @@
           sclera in both eyes turns black and their irises red
         </p>
       </div>
-    </section>
+      <a
+        class="use"
+        target="_blank"
+        href="https://wall.alphacoders.com/tag/ken-kaneki-wallpapers"
+        >DOWNLOAD
+      </a>
+      <section class="Experience-area">  
+        <div><h1>Tokyo ghoul</h1></div> 
+  <div>
+    <h1>kan Kaneki Web</h1>
+    <h3>2014-present fast sesion
+    </h3>
+    <p>Tokyo Ghoul is the first season of an anime television series adapted from the manga of the same name by Sui Ishida. The series is produced by Pierrot, and is directed by Shuhei Morita. The series aired from July 4 to September 19, 2014 on Tokyo MX, TVO, TVA, TVQ, BS Dlife and AT-X.[1] This season adapts the first sixty-six chapters of the manga series.</p>
+  </div>
+      </section>
   </body>
 </html>
