--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kan Kaneki world</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,700;1,400;1,700&family=Bebas+Neue&family=Open+Sans:wght@300&family=Poppins:wght@100&family=Righteous&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <section class="top-banner">
-      <div class="context">
+    <section class="top-banner flexible-container">
+      <div class="half-with">
         <h1>Welcome To</h1>
         <h1><span class="orange-color">Kan Kaneki </span>World !</h1>
         <h3>I am one-eye king Ghoul</h3>
@@ -19,35 +25,20 @@
           condition. After recovering, Kaneki discovers that he underwent a
           surgery that transformed him into a half-ghoul.
         </p>
-        <a
-          class="link-button"
+  
+        <a class="link-button"
+          class=""
           target="_blank"
           href="https://albatros3042.github.io/-ken-kaneki-projects/"
-          >Hire Me</a
-        >
-      </div>
-      <div class="half-width img-container">
-        <img
-          target="_blank"
-          src="images/tokyo-ghoul-kaneki-ken-in-eyepatch-mask-30t2g6edxbz1jlkx.jpg"
-          alt=""
-        />
-      </div>
+          >Hire Me</a>
+  
+      <div class=""></div>
     </section>
     .
-    <section class="dream-big">
-      <div class="img">
-        <img
-          class="images"
-          target="_blank"
-          src="images/Ken Kaneki.jpg"
-          alt=""
-        />
-      </div>
-      <div class="half-width ghouls">
+    <section class="dream-big flexible-container ">
+      <div class="half-with">
         <h2>Kan Kaneki about</h2>
         <h3 class="text">He is a one eye ghoul</h3>
-
         <p>
           Tokyo Ghoul is set in an alternate reality where ghouls, creatures
           that look like normal people but can only survive by eating human
@@ -63,21 +54,40 @@
           of ghouls is that when they are excited or hungry, the color of their
           sclera in both eyes turns black and their irises red
         </p>
+    <a class="link-button" target="_blank" href="https://wall.alphacoders.com/tag/ken-kaneki-wallpapers">DOWNLOAD</a>
+    </section>
+
+    <section class="Experience-area">
+      <div><h1>Tokyo ghoul</h1></div>
+     <div id="kan-kaneki-web" class="flexible-container">
+      <div class="Experience-itam">
+        <h1>kan Kaneki Web</h1>
+        <h3 class="orange-color">2014-present | fast sesion</h3>
+        <p>
+          Tokyo Ghoul is the first season of an anime television series adapted
+          from the manga of the same name by Sui Ishida. The series is produced
+          by Pierrot, and is directed by Shuhei Morita. The series aired from
+          July 4 to September 19, 2014 on Tokyo MX, TVO, TVA, TVQ, BS Dlife and
+          AT-X.[1] This season adapts the first sixty-six chapters of the manga
+          series.
+        </p>
       </div>
-      <a
-        class="use"
-        target="_blank"
-        href="https://wall.alphacoders.com/tag/ken-kaneki-wallpapers"
-        >DOWNLOAD
-      </a>
-      <section class="Experience-area">  
-        <div><h1>Tokyo ghoul</h1></div> 
-  <div>
-    <h1>kan Kaneki Web</h1>
-    <h3>2014-present fast sesion
-    </h3>
-    <p>Tokyo Ghoul is the first season of an anime television series adapted from the manga of the same name by Sui Ishida. The series is produced by Pierrot, and is directed by Shuhei Morita. The series aired from July 4 to September 19, 2014 on Tokyo MX, TVO, TVA, TVQ, BS Dlife and AT-X.[1] This season adapts the first sixty-six chapters of the manga series.</p>
-  </div>
-      </section>
+      <div id="kna-kaneki" class="Experience-itam">
+        <h1>kan kaneki</h1>
+        <h3 class="orange-color">2014-2018 |One-Eyed King</h3>
+        <p>
+          Tokyo Ghoul, an anime series based on the manga of the same name
+          written and illustrated by Sui Ishida, has become a cult classic since
+          its inception in 2014. It follows the story of Ken Kaneki, a young man
+          who is transformed into a half-ghoul after being attacked by one. As
+          he navigates his new life as a ghoul, he must grapple with his own
+          morality and the consequences of his transformation.
+        </p>
+      </div>
+    </divid>
+    </section>
   </body>
+  <footer>
+    <p>kna kaneki 2014-2018 and one one-eye ghoul</p>
+  </footer>
 </html>
