--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
   </head>
   <body>
     <section class="top-banner flexible-container">
+      <!-- LEFT HALT -->
       <div class="half-with">
-        <h1>Welcome To</h1>
-        <h1><span class="orange-color">Kan Kaneki </span>World !</h1>
+        <h1>
+          Welcome To <br />
+          <span class="orange-color">Kan Kaneki </span>World !
+        </h1>
         <h3>I am one-eye king Ghoul</h3>
         <p>
           he story follows Ken Kaneki, a student who barely survives a deadly
@@ -25,17 +28,26 @@
           condition. After recovering, Kaneki discovers that he underwent a
           surgery that transformed him into a half-ghoul.
         </p>
-  
-        <a class="link-button"
+        <a
+          class="link-button"
           class=""
           target="_blank"
           href="https://albatros3042.github.io/-ken-kaneki-projects/"
-          >Hire Me</a>
-  
-      <div class=""></div>
+          >Hire Me</a
+        >
+      </div>
+
+      <!-- RIGHT HALF -->
+      <div class="half-with">
+        <img
+          src="images/tokyo-ghoul-kaneki-ken-in-eyepatch-mask-30t2g6edxbz1jlkx.jpg"
+          alt=""
+        />
+      </div>
     </section>
-    .
-    <section class="dream-big flexible-container ">
+
+    <section class="dream-big flexible-container">
+      <!-- LEFT SIDE -->
       <div class="half-with">
         <h2>Kan Kaneki about</h2>
         <h3 class="text">He is a one eye ghoul</h3>
@@ -54,37 +66,47 @@
           of ghouls is that when they are excited or hungry, the color of their
           sclera in both eyes turns black and their irises red
         </p>
-    <a class="link-button" target="_blank" href="https://wall.alphacoders.com/tag/ken-kaneki-wallpapers">DOWNLOAD</a>
+        <a
+          class="link-button"
+          target="_blank"
+          href="https://wall.alphacoders.com/tag/ken-kaneki-wallpapers"
+          >DOWNLOAD</a
+        >
+      </div>
+      <!-- RIGHT SIDE -->
+      <div class="half-with">
+        <img src="images/Ken Kaneki.jpg" alt="" />
+      </div>
     </section>
 
     <section class="Experience-area">
-      <div><h1>Tokyo ghoul</h1></div>
-     <div id="kan-kaneki-web" class="flexible-container">
-      <div class="Experience-itam">
-        <h1>kan Kaneki Web</h1>
-        <h3 class="orange-color">2014-present | fast sesion</h3>
-        <p>
-          Tokyo Ghoul is the first season of an anime television series adapted
-          from the manga of the same name by Sui Ishida. The series is produced
-          by Pierrot, and is directed by Shuhei Morita. The series aired from
-          July 4 to September 19, 2014 on Tokyo MX, TVO, TVA, TVQ, BS Dlife and
-          AT-X.[1] This season adapts the first sixty-six chapters of the manga
-          series.
-        </p>
+      <h1>Tokyo ghoul</h1>
+      <div id="kan-kaneki-web" class="flexible-container">
+        <div class="Experience-itam">
+          <h1>kan Kaneki Web</h1>
+          <h3 class="orange-color">2014-present | fast sesion</h3>
+          <p>
+            Tokyo Ghoul is the first season of an anime television series
+            adapted from the manga of the same name by Sui Ishida. The series is
+            produced by Pierrot, and is directed by Shuhei Morita. The series
+            aired from July 4 to September 19, 2014 on Tokyo MX, TVO, TVA, TVQ,
+            BS Dlife and AT-X.[1] This season adapts the first sixty-six
+            chapters of the manga series.
+          </p>
+        </div>
+        <div id="kna-kaneki" class="Experience-itam">
+          <h1>kan kaneki</h1>
+          <h3 class="orange-color">2014-2018 |One-Eyed King</h3>
+          <p>
+            Tokyo Ghoul, an anime series based on the manga of the same name
+            written and illustrated by Sui Ishida, has become a cult classic
+            since its inception in 2014. It follows the story of Ken Kaneki, a
+            young man who is transformed into a half-ghoul after being attacked
+            by one. As he navigates his new life as a ghoul, he must grapple
+            with his own morality and the consequences of his transformation.
+          </p>
+        </div>
       </div>
-      <div id="kna-kaneki" class="Experience-itam">
-        <h1>kan kaneki</h1>
-        <h3 class="orange-color">2014-2018 |One-Eyed King</h3>
-        <p>
-          Tokyo Ghoul, an anime series based on the manga of the same name
-          written and illustrated by Sui Ishida, has become a cult classic since
-          its inception in 2014. It follows the story of Ken Kaneki, a young man
-          who is transformed into a half-ghoul after being attacked by one. As
-          he navigates his new life as a ghoul, he must grapple with his own
-          morality and the consequences of his transformation.
-        </p>
-      </div>
-    </divid>
     </section>
   </body>
   <footer>
